@@ -8,64 +8,29 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id 'org.springframework.boot' version '3.1.0'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
-}
-
-group = 'ai.rpg'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '21'
-
-repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
+    id 'org.springframework.boot' version '3.2.0'
 }
 
 dependencies {
-    // Use JUnit test framework.
-    testImplementation libs.junit
-
     // This dependency is used by the application.
-    implementation project(':app:persistence')
-    implementation libs.guava
+    implementation project(':app:repository')
+    implementation project(':app:core')
+    implementation 'com.google.guava:guava:32.1.3-jre'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    implementation 'org.postgresql:postgresql'
     implementation 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation 'org.testcontainers:testcontainers:1.16.0'
-    testImplementation 'org.testcontainers:junit-jupiter:1.16.0'
-}
-
-// Apply a specific Java toolchain to ease working on different environments.
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += ['--enable-preview']
-}
-
-tasks.withType(Test) {
-    jvmArgs += ['--enable-preview']
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += ['--enable-preview']
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.testcontainers:testcontainers'
+    testImplementation 'org.testcontainers:junit-jupiter'
 }
 
 application {
     // Define the main class for the application.
     mainClass = 'ai.rpg.App'
-}
-
-test {
-    useJUnitPlatform()
 }
