@@ -1,44 +1,22 @@
 plugins {
-    id 'java'
-}
-
-group = 'ai.rpg'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '21'
-
-repositories {
-    mavenCentral()
+    id 'java-library'
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
+    api project(':app:core')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-    implementation 'com.h2database:h2:2.1.214'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += ['--enable-preview']
-}
-
-tasks.withType(Test) {
-    jvmArgs += ['--enable-preview']
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += ['--enable-preview']
-}
-
-test {
-    useJUnitPlatform()
+    // Database
+    implementation 'org.postgresql:postgresql'
+    implementation 'com.h2database:h2'
+    
+    // Migration
+    implementation 'org.flywaydb:flyway-core'
+    
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 } 
